Closed
Bug 704056
Opened 13 years ago
Closed 13 years ago
remove 'countryCode' from nsIDOMGeoPositionAddress.idl
Categories
(Core :: DOM: Geolocation, defect)
Core
DOM: Geolocation
Tracking
()
RESOLVED
FIXED
mozilla11
People
(Reporter: myakura, Assigned: emorley)
Details
(Keywords: addon-compat, dev-doc-complete)
Attachments
(1 file)
12.55 KB,
patch
|
dougt
:
review+
dougt
:
feedback+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/535.10 (KHTML, like Gecko) Chrome/17.0.945.0 Safari/535.10
Steps to reproduce:
Looked at http://mxr.mozilla.org/mozilla-central/source/dom/interfaces/geolocation/nsIDOMGeoPositionAddress.idl
Actual results:
found nsIDOMGeoPositionAddress.idl defines a property called 'countryCode' which isn't defined in the Geolocation v2 specification.
Expected results:
Per the spec, 'country' property "is specified using the two-letter [ISO 3166-1] code." so it seems 'countryCode' is pretty redundant. Rather than keeping undefined property or consult Geolocation WG to have it specified, I suggest removing it from Gecko.
Assignee | ||
Comment 1•13 years ago
|
||
Doug, can you confirm this is wanted please? :-)
https://tbpl.mozilla.org/?tree=Try&rev=403b9f4b60d2
Assignee: nobody → bmo
Attachment #581609 -
Flags: feedback?(doug.turner)
Updated•13 years ago
|
Attachment #581609 -
Flags: feedback?(doug.turner) → feedback+
Assignee | ||
Updated•13 years ago
|
Attachment #581609 -
Flags: review?(doug.turner)
Assignee | ||
Updated•13 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•13 years ago
|
Attachment #581609 -
Flags: review?(doug.turner) → review+
Assignee | ||
Comment 2•13 years ago
|
||
Flags: in-testsuite-
Target Milestone: --- → mozilla11
Assignee | ||
Comment 3•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Keywords: addon-compat,
dev-doc-needed
OS: Windows 7 → All
Hardware: x86 → All
Resolution: --- → FIXED
Comment 4•13 years ago
|
||
I noted the attribute's removal at https://developer.mozilla.org/en/XPCOM_Interface_Reference/nsIDOMGeoPositionAddress , not sure if anything else needs to be done here.
Comment 5•13 years ago
|
||
I added a mention to Firefox 11 for developers and verified this property isn't used in any examples.
That article does need to move to the DOM reference with appropriate reformatting, but that's a separate issue.
Keywords: dev-doc-needed → dev-doc-complete
You need to log in
before you can comment on or make changes to this bug.
Description
•