Bug 704056 - Remove countryCode from nsIDOMGeoPositionAddress since it's not in the spec; r=dougt