dom/src/geolocation/nsGeoPositionIPCSerialiser.h
@@ -37,7 +37,6 @@
 #ifndef dom_src_geolocation_IPC_serialiser
 #define dom_src_geolocation_IPC_serialiser
 
-
 #include "IPC/IPCMessageUtils.h"
 #include "nsGeoPosition.h"
 #include "nsIDOMGeoPosition.h"
@@ -84,9 +83,6 @@ struct ParamTraits<GeoPositionAddress>
     aParam->GetCountry(addressLine);
     WriteParam(aMsg, addressLine);
 
-    aParam->GetCountryCode(addressLine);
-    WriteParam(aMsg, addressLine);
-
     aParam->GetPostalCode(addressLine);
     WriteParam(aMsg, addressLine);
   }
@@ -111,7 +107,6 @@ struct ParamTraits<GeoPositionAddress>
     nsString county;
     nsString region;
     nsString country;
-    nsString countryCode;
     nsString postalCode;
 
     // It's not important to us where it fails, but rather if it fails
@@ -122,7 +117,6 @@ struct ParamTraits<GeoPositionAddress>
           ReadParam(aMsg, aIter, &county      ) &&
           ReadParam(aMsg, aIter, &region      ) &&
           ReadParam(aMsg, aIter, &country     ) &&
-          ReadParam(aMsg, aIter, &countryCode ) &&
           ReadParam(aMsg, aIter, &postalCode  ))) return false;
 
     // We now have all the data
@@ -133,7 +127,6 @@ struct ParamTraits<GeoPositionAddress>
                                         county,       /* aCounty       */
                                         region,       /* aRegion       */
                                         country,      /* aCountry      */
-                                        countryCode,  /* aCountryCode  */
                                         postalCode    /* aPostalCode   */
                                        );
     return true;
@@ -286,4 +279,3 @@ struct ParamTraits<GeoPosition>
 }
 
 #endif
-
